# bevytraining

./: Cargo.toml  flake.nix
src/: main.rs  player.rs
src/assets/characters/: characters.ron
src/characters/: animation.rs  config.rs  facing.rs  input.rs  mod.rs  movement.rs  physics.rs  spawn.rs  state.rs
src/collision/: map.rs  tile_type.rs
src/map/: assets.rs  generate.rs  mod.rs  models.rs  rules.rs  sockets.rs  tilemap.rs
src/state/: game_state.rs  loading.rs  mod.rs  pause.rs
