[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { package = "bevy", version = "0.18" }
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
bevy_procedural_tilemaps = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]
